--- a/build.gradle
+++ b/build.gradle
@@ -2,6 +2,7 @@
 buildscript {
     repositories {
         google()
+        jcenter()
         mavenCentral()
     }
     dependencies {
@@ -16,8 +17,10 @@ buildscript {
 allprojects {
     repositories {
         google()
-        mavenCentral()
-
+        jcenter()
+        maven {
+            url "https://maven.google.com"
+        }
     }
 }
 
